@@ -3,6 +3,7 @@ Unreleased
 Added
     View / update LXD settings on a host if admin (#534)
     Set snap cert location (#271)
+    Admin can view disks list on server page
 
 Changed
     Use bash shell as the default for {oracle, rocky} images (#544)
